syntax = "proto3";
option java_multiple_files = true;
package cdx.opencdx.grpc.tinkar;
import "google/protobuf/wrappers.proto";

/*
 * Tinkar Service: Provides a gRPC endpoint for the `sayTinkar` RPC method.
 */
service Tinkar {
  /*
   * `sayTinkar` RPC method, which expects a `TinkarRequest` and returns a `TinkarResponse`.
   */
  rpc sayTinkar (TinkarRequest) returns (TinkarResponse) {}
}
/*
 * TinkarRequest Message: Represents the user's request with a single field `name` (string).
 */
message TinkarRequest {
  /*
   * The name of the user required for the request.
   */
  string name = 1;
}
/*
 * TinkarResponse Message: Represents the response that `Tinkar` service returns.
 */
message TinkarResponse {
  /*
   * Response message from the Tinkar service.
   */
  string message = 1;
}